[project]
name = "doctor-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.13.0",
    "requests>=2.32.3",
    "selenium==4.25.0",
    "sqlalchemy>=2.0.41",
    "webdriver-manager>=4.0.2",
]
